--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,16 @@ server.port = 9001
 server.forward-headers-strategy=framework 
 
 
+spring.datasource.url=mysql:jdbc://localhost:3306/my_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Amypo
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# it is my sql configuration
+
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database-platform=org.hibernate.dialect.Mysql8Dialect
