--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
+#important lines donot changes
+
 spring.application.name=demo
 # Don't change the port
 server.port = 9001
 # for https
 server.forward-headers-strategy=framework 
+
+# it is my sql configuration
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/my_db?createDatabaseIfNotExist=true
@@ -11,7 +15,7 @@ spring.datasource.password=Amypo
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-# it is my sql configuration
+
 
 
 spring.jpa.hibernate.ddl-auto=update
